--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </nav>
 
         <!-- 🏡 Home Page 🏡 -->
-        <main class="page home-page">
+        <main id="homePage" class="page home-page">
             <div class="hero">
                 <div class="hero-inner">
                     <img class="hero__image" src="./imgs/banner.png"
@@ -112,6 +112,15 @@
                 </div>
             </div>
         </main>
+
+        <!-- 🖼 Banner Page 🖼 -->
+        <main id="bannersPage" class="page banner-page element-hidden">Banner</main>
+
+        <!-- 👩‍👩‍👧‍👦 Follower Page 👩‍👩‍👧‍👦 -->
+        <main id="followersPage" class="page follower-page element-hidden">Followers</main>
+
+        <!-- 🏙 Image Page 🏙 -->
+        <main id="imagePage" class="page image-page element-hidden">Image</main>
 
         <!-- 🗓 Footer 🗓 -->
         <footer class="footer">
