Fixed image links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="options__boxes">
                     <!-- Banner Preview -->
                     <div class="option-box">
-                        <img class="option-box__image" src="/imgs/examples/example-banner.png" alt="">
+                        <img class="option-box__image" src="./imgs/examples/example-banner.png" alt="">
                         <div class="option-box__text">
                             <h4 class="option-box__text__header">Twitter Banners</h4>
                             <p class="option-box__text__content">Create your own Twitter banner with the help of our
@@ -95,12 +95,12 @@
                             <button id="celebrateFollowersBtn"
                                 class="option-box__text__button btn-primary">Celebrate</button>
                         </div>
-                        <img class="option-box__image" src="/imgs/examples/example-follower-poster.png" alt="">
+                        <img class="option-box__image" src="./imgs/examples/example-follower-poster.png" alt="">
                     </div>
 
                     <!-- Image Preview -->
                     <div class="option-box">
-                        <img class="option-box__image" src="/imgs/examples/example-image-poster.png" alt="">
+                        <img class="option-box__image" src="./imgs/examples/example-image-poster.png" alt="">
                         <div class="option-box__text">
                             <h4 class="option-box__text__header">Image Posts</h4>
                             <p class="option-box__text__content">Create images for your Twitter posts with the
