--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <!-- Google Fonts (Oswald) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <!-- Title -->
     <title>bannr | Personalised Twitter Banners in Minutes</title>
     <!-- Styles -->
@@ -23,8 +28,11 @@
     <link rel="stylesheet" href="styles/update-bar.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link rel="stylesheet" href="styles/pages/home.css">
+    <link rel="stylesheet" href="styles/pages/followers.css">
+    <link rel="stylesheet" href="styles/pages/images.css">
     <link rel="stylesheet" href="styles/footer.css">
     <!-- Script -->
+    <script src="html2canvas.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 
@@ -121,10 +129,75 @@
         <main id="bannersPage" class="page banner-page element-hidden">Banner</main>
 
         <!-- 👩‍👩‍👧‍👦 Follower Page 👩‍👩‍👧‍👦 -->
-        <main id="followersPage" class="page follower-page element-hidden">Followers</main>
+        <main id="followersPage" class="page follower-page element-hidden">
+            <div class="follower-page--grid">
+                <!-- 📝 Editing Column -->
+                <div class="grid-component grid-component__left">
+
+                </div>
+                <!-- 🤳 Preview Column -->
+                <div class="grid-component grid-component__right">
+                    <!-- 🤳 Follower Preview -->
+                    <div class="preview-container follower-preview">
+                        <div class="follower-preview__icon">
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                        <div class="follower-preview__text">
+                            <p class="follower-preview__text--number">4000</p>
+                            <p class="follower-preview__text--text">Followers</p>
+                        </div>
+                        <div class="follower-preview__message">Thank you!</div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <!-- 🏙 Image Page 🏙 -->
-        <main id="imagePage" class="page image-page element-hidden">Image</main>
+        <main id="imagePage" class="page image-page element-hidden">
+
+            <!-- Test -->
+            <!-- <div id="captureBox" class="capture__image-container">
+                <p>Test</p>
+            </div>
+            <div id="resultBox"></div>
+            <button id="captureBtn">Capture</button>
+            <button id="downloadBtn">Download</button> -->
+
+            <div class="page-inner">
+                <div class="page-inner--left">
+                    <button id="testBtn" type="reset">Test</button>
+                </div>
+
+                <div class="page-inner--right">
+                    <!-- Preview Tag (absolute) -->
+                    <div class="preview-tag">
+                        <i class="preview-tag__icon fa-solid fa-magnifying-glass"></i>
+                        <p class="preview-tag__text">Preview</p>
+                    </div>
+
+                    <!-- Preview Image -->
+                    <div class="preview-image-container">
+
+                        <!-- Preview: Image #1 -->
+                        <div id="preview__img-1" class="preview-image-container-inner">
+                            <div class="preview-image-container__text">#100DaysOfCode</div>
+                        </div>
+
+                    </div>
+
+                    <!-- Capture Image -->
+                    <div id="screenshotBox" class="capture-image-container">
+
+                        <!-- Capture: Image #1 -->
+                        <div id="capture__img-1" class="capture-image-container-inner">
+                            <div class="capture-image-container__text">#100DaysOfCode</div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </main>
 
         <!-- 🗓 Footer 🗓 -->
         <footer class="footer">
